--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -28,7 +28,7 @@ addCar.location.11=Aqaba
 addCar.maker.1=Opel
 addCar.maker.2=Audi
 addCar.maker.3=Infiniti
-addCar.maker.4=MG 
+addCar.maker.4=MG
 addCar.maker.5=Isuzu
 addCar.maker.6=Porsche
 addCar.maker.7=Hyundai
@@ -63,3 +63,41 @@ addCar.maker.35=Mitsubishi
 addCar.maker.36=Nissan
 addCar.maker.37=Honda
 addCar.maker.38=Other
+addCar.label.ad_title= Ad title
+addCar.label.location= Location
+addCar.label.car_maker= Car Maker
+add.label.car_model=  Car Model
+addCar.label.car_condition= Car Condition
+addCar.label.transmission_type= Transmission Type
+addCar.label.fuel_type= Fuel Type
+addCar.label.kilometers=  Kilometers
+addCar.label.initial_price= Initial Price 
+addCar.label.description= Description
+addCar.label.images= Images
+addCar.label.submit= Submit
+main.page.dropdown.profile= Profile
+main.page.dropdown.logout= logout
+login.page.sign_in= Sign In
+login.page.email= Email
+login.page.password= Password
+login.page.login= Log In
+login.page.create_new_account= Create New Account
+create.page.create_new_account= Create New Account
+create.page.first_name= First Name
+create.page.middle_name= Middle Name
+create.page.last_name= Last Name
+create.page.email= Email
+create.page.password= Password
+create.page.confirm_password= Confirm Password
+create.page.phone_number= Phone Number
+create.page.credit_card_number= Credit Card Number
+create.page.country= Country
+create.page.city= City
+create.page.create= Create
+profile.full_name= Full Name: 
+profile.email= Email:
+profile.phone_number= Phone Number:
+profile.country= Country: 
+profile.city= City: 
+profile.credit_card_number= Credit Card Number:
+
