--- a/src/main/resources/messages/messages_ar.properties
+++ b/src/main/resources/messages/messages_ar.properties
@@ -25,3 +25,40 @@ addCar.location.8=\u0627\u0644\u0643\u0631\u0643
 addCar.location.9=\u0627\u0644\u0637\u0641\u064A\u0644\u0629
 addCar.location.10=\u0645\u0639\u0627\u0646
 addCar.location.11=\u0627\u0644\u0639\u0642\u0628\u0629
+addCar.label.ad_title= ????? ???????
+addCar.label.location= ??????
+addCar.label.car_maker= ????? 
+add.label.car_model= ??? ?????
+addCar.label.car_condition= ?????? 
+addCar.label.transmission_type= ??? ???? ??????
+addCar.label.fuel_type= ??? ?????? 
+addCar.label.kilometers= ???????????
+addCar.label.initial_price= ????? ?????????
+addCar.label.description= ?????
+addCar.label.images= ?????
+addCar.label.submit= ?????
+main.page.dropdown.profile= ????? ??????
+main.page.dropdown.logout= ????? ??????
+login.page.sign_in= ????? ??????
+login.page.email= ?????? ??????????
+login.page.password= ???? ??????
+login.page.login= ????
+login.page.create_new_account= ????? ???? ????
+create.page.create_new_account= ????? ???? ????
+create.page.first_name= ????? ?????
+create.page.middle_name= ????? ??????
+create.page.last_name= ??? ???????
+create.page.email= ?????? ??????????
+create.page.password= ???? ??????
+create.page.confirm_password= ????? ???? ??????
+create.page.phone_number= ??? ??????
+create.page.credit_card_number= ??? ??????? ???????
+create.page.country= ??????
+create.page.city= ???????
+create.page.create= ?????
+profile.full_name= ????? : 
+profile.email= ?????? ?????????? :
+profile.phone_number= ??? ?????? :
+profile.country= ?????? : 
+profile.city= ??????? : 
+profile.credit_card_number= ??? ??????? ??????? :
