--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -66,7 +66,7 @@ addCar.maker.38=Other
 addCar.label.ad_title= Ad title
 addCar.label.location= Location
 addCar.label.car_maker= Car Maker
-add.label.car_model=  Car Model
+add.label.year=  Year
 addCar.label.car_condition= Car Condition
 addCar.label.transmission_type= Transmission Type
 addCar.label.fuel_type= Fuel Type
