--- a/src/main/resources/messages/messages_ar.properties
+++ b/src/main/resources/messages/messages_ar.properties
@@ -28,7 +28,7 @@ addCar.location.11=\u0627\u0644\u0639\u0642\u0628\u0629
 addCar.label.ad_title= ????? ???????
 addCar.label.location= ??????
 addCar.label.car_maker= ????? 
-add.label.car_model= ??? ?????
+add.label.year= ??? ????? 
 addCar.label.car_condition= ?????? 
 addCar.label.transmission_type= ??? ???? ??????
 addCar.label.fuel_type= ??? ?????? 
