--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -100,4 +100,5 @@ profile.phone_number= Phone Number:
 profile.country= Country: 
 profile.city= City: 
 profile.credit_card_number= Credit Card Number:
+profile.credit_card_number.2= Credit Card Number:
 
