--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -66,12 +66,13 @@ addCar.maker.38=Other
 addCar.label.ad_title= Ad title
 addCar.label.location= Location
 addCar.label.car_maker= Car Maker
-add.label.year=  Year
+add.label.car_model= Car Model
 addCar.label.car_condition= Car Condition
 addCar.label.transmission_type= Transmission Type
 addCar.label.fuel_type= Fuel Type
 addCar.label.kilometers=  Kilometers
-addCar.label.initial_price= Initial Price 
+addCar.label.initial_price= Initial Price
+addCar.label.year=  Year
 addCar.label.description= Description
 addCar.label.images= Images
 addCar.label.submit= Submit
@@ -100,5 +101,4 @@ profile.phone_number= Phone Number:
 profile.country= Country: 
 profile.city= City: 
 profile.credit_card_number= Credit Card Number:
-profile.credit_card_number.2= Credit Card Number:
 
