--- a/src/main/resources/messages/messages_ar.properties
+++ b/src/main/resources/messages/messages_ar.properties
@@ -10,55 +10,45 @@ main.page.label.real-estate=\u0639\u0642\u0627\u0631\u0627\u062A
 main.page.label.electronics-devices=\u0623\u062C\u0647\u0632\u0629 \u0643\u0647\u0631\u0628\u0627\u0626\u064A\u0629
 main.page.label.other_things=\u0623\u062E\u0631\u0649
 main.page.label.website.name=\u0627\u0644\u0645\u0632\u0627\u062F \u0627\u0644\u0623\u0631\u062F\u0646\u064A
-main.page.label.website.home=\u0627\u0644\u0635\u0641\u062D\u0629 \u0627\u0644\u0631\u0626\u064A\u0633\u064A\u0629 
-main.page.label.website.Post=\u0623\u0636\u0641 \u0625\u0639\u0644\u0627\u0646\u0643 
+main.page.label.website.home=\u0627\u0644\u0635\u0641\u062D\u0629 \u0627\u0644\u0631\u0626\u064A\u0633\u064A\u0629
+main.page.label.website.Post=\u0623\u0636\u0641 \u0625\u0639\u0644\u0627\u0646\u0643
 main.page.label.website.login=\u062A\u0633\u062C\u064A\u0644 \u0627\u0644\u062F\u062E\u0648\u0644
-addCar.location.0=\u0627\u0631\u0628\u062F
-addCar.location.1=\u062C\u0631\u0634
-addCar.location.2=\u0639\u062C\u0644\u0648\u0646
-addCar.location.3=\u0627\u0644\u0628\u0644\u0642\u0627\u0621
-addCar.location.4=\u0645\u0623\u062F\u0628\u0627
-addCar.location.5=\u0627\u0644\u0645\u0641\u0631\u0642
-addCar.location.6=\u0627\u0644\u0632\u0631\u0642\u0627\u0621
-addCar.location.7=\u0639\u0645\u0627\u0646
-addCar.location.8=\u0627\u0644\u0643\u0631\u0643
-addCar.location.9=\u0627\u0644\u0637\u0641\u064A\u0644\u0629
-addCar.location.10=\u0645\u0639\u0627\u0646
-addCar.location.11=\u0627\u0644\u0639\u0642\u0628\u0629
-addCar.label.ad_title= ????? ???????
-addCar.label.location= ??????
-addCar.label.car_maker= ????? 
-add.label.year= ??? ????? 
-addCar.label.car_condition= ?????? 
-addCar.label.transmission_type= ??? ???? ??????
-addCar.label.fuel_type= ??? ?????? 
-addCar.label.kilometers= ???????????
-addCar.label.initial_price= ????? ?????????
-addCar.label.description= ?????
-addCar.label.images= ?????
-addCar.label.submit= ?????
-main.page.dropdown.profile= ????? ??????
-main.page.dropdown.logout= ????? ??????
-login.page.sign_in= ????? ??????
-login.page.email= ?????? ??????????
-login.page.password= ???? ??????
-login.page.login= ????
-login.page.create_new_account= ????? ???? ????
-create.page.create_new_account= ????? ???? ????
-create.page.first_name= ????? ?????
-create.page.middle_name= ????? ??????
-create.page.last_name= ??? ???????
-create.page.email= ?????? ??????????
-create.page.password= ???? ??????
-create.page.confirm_password= ????? ???? ??????
-create.page.phone_number= ??? ??????
-create.page.credit_card_number= ??? ??????? ???????
-create.page.country= ??????
-create.page.city= ???????
-create.page.create= ?????
-profile.full_name= ????? : 
-profile.email= ?????? ?????????? :
-profile.phone_number= ??? ?????? :
-profile.country= ?????? : 
-profile.city= ??????? : 
-profile.credit_card_number= ??? ??????? ??????? :
+addCar.label.ad_title= \u0639\u0646\u0648\u0627\u0646 \u0627\u0644\u0625\u0639\u0644\u0627\u0646
+addCar.label.location= \u0627\u0644\u0645\u0648\u0642\u0639
+addCar.label.car_maker= \u0627\u0644\u0646\u0648\u0639
+add.label.car_model= \u0627\u0644\u0641\u0626\u0629
+addCar.label.car_condition= \u0627\u0644\u062D\u0627\u0644\u0629
+addCar.label.transmission_type= \u0646\u0648\u0639 \u0646\u0627\u0642\u0644 \u0627\u0644\u062D\u0631\u0643\u0629
+addCar.label.fuel_type= \u0646\u0648\u0639 \u0627\u0644\u0648\u0642\u0648\u062F
+addCar.label.kilometers= \u0627\u0644\u0643\u064A\u0644\u0648\u0645\u062A\u0631\u0627\u062A
+addCar.label.initial_price= \u0627\u0644\u0633\u0639\u0631 \u0627\u0644\u0625\u0628\u062A\u062F\u0627\u0626\u064A
+addCar.label.year= \u0633\u0646\u0629 \u0627\u0644\u0635\u0646\u0639
+addCar.label.description= \u0627\u0644\u0648\u0635\u0641
+addCar.label.images= \u0627\u0644\u0635\u0648\u0631
+addCar.label.submit= \u0625\u0636\u0627\u0641\u0629
+main.page.dropdown.profile= \u0627\u0644\u0645\u0644\u0641 \u0627\u0644\u0634\u062E\u0635\u064A
+main.page.dropdown.logout= \u062A\u0633\u062C\u064A\u0644 \u0627\u0644\u062E\u0631\u0648\u062C
+login.page.sign_in= \u062A\u0633\u062C\u064A\u0644 \u0627\u0644\u062F\u062E\u0648\u0644
+login.page.email= \u0627\u0644\u0628\u0631\u064A\u062F \u0627\u0644\u0625\u0644\u0643\u062A\u0631\u0648\u0646\u064A
+login.page.password= \u0643\u0644\u0645\u0629 \u0627\u0644\u0645\u0631\u0648\u0631
+login.page.login= \u062F\u062E\u0648\u0644
+login.page.create_new_account= \u0625\u0646\u0634\u0627\u0621 \u062D\u0633\u0627\u0628 \u062C\u062F\u064A\u062F
+create.page.create_new_account= \u0625\u0646\u0634\u0627\u0621 \u062D\u0633\u0627\u0628 \u062C\u062F\u064A\u062F
+create.page.first_name= \u0627\u0644\u0623\u0633\u0645 \u0627\u0644\u0623\u0648\u0644
+create.page.middle_name= \u0627\u0644\u0623\u0633\u0645 \u0627\u0644\u062B\u0627\u0646\u064A
+create.page.last_name= \u0623\u0633\u0645 \u0627\u0644\u0639\u0627\u0626\u0644\u0629
+create.page.email= \u0627\u0644\u0628\u0631\u064A\u062F \u0627\u0644\u0625\u0644\u0643\u062A\u0631\u0648\u0646\u064A
+create.page.password= \u0643\u0644\u0645\u0629 \u0627\u0644\u0645\u0631\u0648\u0631
+create.page.confirm_password= \u062A\u0623\u0643\u064A\u062F \u0643\u0644\u0645\u0629 \u0627\u0644\u0645\u0631\u0648\u0631
+create.page.phone_number= \u0631\u0642\u0645 \u0627\u0644\u0647\u0627\u062A\u0641
+create.page.credit_card_number= \u0631\u0642\u0645 \u0627\u0644\u0628\u0637\u0627\u0642\u0629 \u0627\u0644\u0628\u0646\u0643\u064A\u0629
+create.page.country= \u0627\u0644\u062F\u0648\u0644\u0629
+create.page.city= \u0627\u0644\u0645\u062F\u064A\u0646\u0629
+create.page.create= \u0625\u0646\u0634\u0627\u0621
+profile.full_name= \u0627\u0644\u0623\u0633\u0645 :
+profile.email= \u0627\u0644\u0628\u0631\u064A\u062F \u0627\u0644\u0625\u0644\u0643\u062A\u0631\u0648\u0646\u064A :
+profile.phone_number= \u0631\u0642\u0645 \u0627\u0644\u0647\u0627\u062A\u0641 :
+profile.country= \u0627\u0644\u062F\u0648\u0644\u0629 :
+profile.city=\u0627\u0644\u0645\u062D\u0627\u0641\u0638\u0629 :
+profile.credit_card_number=\u0631\u0642\u0645 \u0627\u0644\u0628\u0637\u0627\u0642\u0629 \u0627\u0644\u0628\u0646\u0643\u064A\u0629 :
+
