--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -13,18 +13,18 @@ main.page.label.website.name=Jordanian Auction
 main.page.label.website.home=Home 
 main.page.label.website.Post=Post Your Ad
 main.page.label.website.login=Log In
-addCar.location.0=Irbid
-addCar.location.1=Jerash
-addCar.location.2=Ajloun
-addCar.location.3=Jerash
-addCar.location.4=Madaba
-addCar.location.5=al-Mafraq
-addCar.location.6=Zarqa
-addCar.location.7=Amman
-addCar.location.8=al-Karak
-addCar.location.9=at-Tafila
-addCar.location.10=Ma'an
-addCar.location.11=Aqaba
+location.city.0=Irbid
+location.city.1=Jerash
+location.city.2=Ajloun
+location.city.3=\u0650Al-Sult
+location.city.4=Madaba
+location.city.5=al-Mafraq
+location.city.6=Zarqa
+location.city.7=Amman
+location.city.8=al-Karak
+location.city.9=at-Tafila
+location.city.10=Ma'an
+location.city.11=Aqaba
 addCar.maker.1=Opel
 addCar.maker.2=Audi
 addCar.maker.3=Infiniti
@@ -63,10 +63,10 @@ addCar.maker.35=Mitsubishi
 addCar.maker.36=Nissan
 addCar.maker.37=Honda
 addCar.maker.38=Other
-addCar.label.ad_title= Ad title
+addCar.label.ad_title= Ad Title
 addCar.label.location= Location
 addCar.label.car_maker= Car Maker
-add.label.car_model= Car Model
+addCar.label.car_model= Car Model
 addCar.label.car_condition= Car Condition
 addCar.label.transmission_type= Transmission Type
 addCar.label.fuel_type= Fuel Type
@@ -101,4 +101,31 @@ profile.phone_number= Phone Number:
 profile.country= Country: 
 profile.city= City: 
 profile.credit_card_number= Credit Card Number:
-
+addFurniture.label.ad_title=  Ad Title
+addFurniture.label.location= Location
+addFurniture.label.condition= Condition
+addFurniture.label.initial_price=  Initial Price
+addFurniture.label.description= Description
+addFurniture.label.images= Images
+addFurniture.label.submit= Submit
+addElectricals.label.ad_title= Ad Title
+addElectricals.label.location= Location
+addElectricals.label.condition= Condition
+addElectricals.label.initial_price= Initial Price
+addElectricals.label.description= Description
+addElectricals.label.images= Images
+addElectricals.label.submit= Submit
+addOtherThings.label.ad_title= Ad Title
+addOtherThings.label.location= Location
+addOtherThings.label.condition= Condition
+addOtherThings.label.initial_price= Initial Price
+addOtherThings.label.description= Description
+addOtherThings.label.images= Images
+addOtherThings.label.submit= Submit
+addRealEstates.label.ad_title= Ad Title
+addRealEstates.label.location= Location
+addRealEstates.label.RealEstateType=Real Estate Type
+addRealEstates.label.initial_price= Initial Price
+addRealEstates.label.description= Description
+addRealEstates.label.images= Images
+addRealEstates.label.submit= Submit
