--- a/src/main/resources/messages/messages_ar.properties
+++ b/src/main/resources/messages/messages_ar.properties
@@ -16,7 +16,7 @@ main.page.label.website.login=\u062A\u0633\u062C\u064A\u0644 \u0627\u0644\u062F\
 addCar.label.ad_title= \u0639\u0646\u0648\u0627\u0646 \u0627\u0644\u0625\u0639\u0644\u0627\u0646
 addCar.label.location= \u0627\u0644\u0645\u0648\u0642\u0639
 addCar.label.car_maker= \u0627\u0644\u0646\u0648\u0639
-add.label.car_model= \u0627\u0644\u0641\u0626\u0629
+addCar.label.car_model= \u0627\u0644\u0641\u0626\u0629
 addCar.label.car_condition= \u0627\u0644\u062D\u0627\u0644\u0629
 addCar.label.transmission_type= \u0646\u0648\u0639 \u0646\u0627\u0642\u0644 \u0627\u0644\u062D\u0631\u0643\u0629
 addCar.label.fuel_type= \u0646\u0648\u0639 \u0627\u0644\u0648\u0642\u0648\u062F
@@ -51,4 +51,43 @@ profile.phone_number= \u0631\u0642\u0645 \u0627\u0644\u0647\u0627\u062A\u0641 :
 profile.country= \u0627\u0644\u062F\u0648\u0644\u0629 :
 profile.city=\u0627\u0644\u0645\u062D\u0627\u0641\u0638\u0629 :
 profile.credit_card_number=\u0631\u0642\u0645 \u0627\u0644\u0628\u0637\u0627\u0642\u0629 \u0627\u0644\u0628\u0646\u0643\u064A\u0629 :
-
+addFurniture.label.ad_title= \u0639\u0646\u0648\u0627\u0646 \u0627\u0644\u0625\u0639\u0644\u0627\u0646
+addFurniture.label.location= \u0627\u0644\u0645\u0648\u0642\u0639
+addFurniture.label.condition= \u0627\u0644\u062D\u0627\u0644\u0629
+addFurniture.label.initial_price= \u0627\u0644\u0633\u0639\u0631 \u0627\u0644\u0625\u0628\u062A\u062F\u0627\u0626\u064A
+addFurniture.label.description= \u0627\u0644\u0648\u0635\u0641
+addFurniture.label.images= \u0627\u0644\u0635\u0648\u0631
+addFurniture.label.submit= \u0625\u0636\u0627\u0641\u0629
+addElectricals.label.ad_title= \u0639\u0646\u0648\u0627\u0646 \u0627\u0644\u0625\u0639\u0644\u0627\u0646
+addElectricals.label.location= \u0627\u0644\u0645\u0648\u0642\u0639
+addElectricals.label.condition= \u0627\u0644\u062D\u0627\u0644\u0629
+addElectricals.label.initial_price= \u0627\u0644\u0633\u0639\u0631 \u0627\u0644\u0625\u0628\u062A\u062F\u0627\u0626\u064A
+addElectricals.label.description= \u0627\u0644\u0648\u0635\u0641
+addElectricals.label.images= \u0627\u0644\u0635\u0648\u0631
+addElectricals.label.submit= \u0625\u0636\u0627\u0641\u0629
+addOtherThings.label.ad_title= \u0639\u0646\u0648\u0627\u0646 \u0627\u0644\u0625\u0639\u0644\u0627\u0646
+addOtherThings.label.location= \u0627\u0644\u0645\u0648\u0642\u0639
+addOtherThings.label.condition= \u0627\u0644\u062D\u0627\u0644\u0629
+addOtherThings.label.initial_price= \u0627\u0644\u0633\u0639\u0631 \u0627\u0644\u0625\u0628\u062A\u062F\u0627\u0626\u064A
+addOtherThings.label.description= \u0627\u0644\u0648\u0635\u0641
+addOtherThings.label.images= \u0627\u0644\u0635\u0648\u0631
+addOtherThings.label.submit= \u0625\u0636\u0627\u0641\u0629
+addRealEstates.label.ad_title= \u0639\u0646\u0648\u0627\u0646 \u0627\u0644\u0625\u0639\u0644\u0627\u0646
+addRealEstates.label.location= \u0627\u0644\u0645\u0648\u0642\u0639
+addRealEstates.label.condition= \u0627\u0644\u062D\u0627\u0644\u0629
+addRealEstates.label.initial_price= \u0627\u0644\u0633\u0639\u0631 \u0627\u0644\u0625\u0628\u062A\u062F\u0627\u0626\u064A
+addRealEstates.label.description= \u0627\u0644\u0648\u0635\u0641
+addRealEstates.label.images= \u0627\u0644\u0635\u0648\u0631
+addRealEstates.label.submit= \u0625\u0636\u0627\u0641\u0629
+location.city.0=\u0625\u0631\u0628\u062F
+location.city.1=\u062C\u0631\u0634
+location.city.2=\u0639\u062C\u0644\u0648\u0646
+location.city.3=\u0627\u0644\u0633\u0644\u0637
+location.city.4=\u0645\u0623\u062F\u0628\u0627
+location.city.5=\u0627\u0644\u0645\u0641\u0631\u0642
+location.city.6=\u0627\u0644\u0632\u0631\u0642\u0627\u0621
+location.city.7=\u0639\u0645\u0627\u0646
+location.city.8=\u0627\u0644\u0643\u0631\u0643
+location.city.9=\u0627\u0644\u0637\u0641\u064A\u0644\u0629
+location.city.10=\u0645\u0639\u0627\u0646
+location.city.11=\u0627\u0644\u0639\u0642\u0628\u0629
