--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -25,6 +25,29 @@ location.city.8=al-Karak
 location.city.9=at-Tafila
 location.city.10=Ma'an
 location.city.11=Aqaba
+transmission_type.1=Manual
+transmission_type.2=Auto
+transmission_type.3=Other
+fuel_type.1=Gasolin
+fuel_type.2=Diesel
+fuel_type.3=Eliecteric
+fuel_type.4=Hybrid
+car_condition.1=new
+car_condition.2=used
+condition.new= New
+condition.used= Used
+transmission_type.Manual= Manual
+transmission_type.Auto= Auto
+transmission_type.Other= Other
+fuel_type.Gasolin= Gasolin
+fuel_type.Diesel= Diesel
+fuel_type.Eliecteric= Eliecteric
+fuel_type.Hybrid= Hybrid
+real_estate_type.Apartment= Apartment
+real_estate_type.Villa= Villa
+real_estate_type.Land= Land
+real_estate_type.Farm= Farm
+real_estate_type.Commercial= Commercial
 addCar.maker.1=Opel
 addCar.maker.2=Audi
 addCar.maker.3=Infiniti
@@ -63,6 +86,8 @@ addCar.maker.35=Mitsubishi
 addCar.maker.36=Nissan
 addCar.maker.37=Honda
 addCar.maker.38=Other
+addCar.title= Add Car
+addCar.label= Add Car
 addCar.label.ad_title= Ad Title
 addCar.label.location= Location
 addCar.label.car_maker= Car Maker
@@ -74,6 +99,7 @@ addCar.label.kilometers=  Kilometers
 addCar.label.initial_price= Initial Price
 addCar.label.year=  Year
 addCar.label.description= Description
+addCar.label.color= Color
 addCar.label.images= Images
 addCar.label.submit= Submit
 main.page.dropdown.profile= Profile
@@ -101,6 +127,8 @@ profile.phone_number= Phone Number:
 profile.country= Country: 
 profile.city= City: 
 profile.credit_card_number= Credit Card Number:
+addFurniture.title= Add Furniture
+addFurniture.label= Add Furniture
 addFurniture.label.ad_title=  Ad Title
 addFurniture.label.location= Location
 addFurniture.label.condition= Condition
@@ -108,13 +136,20 @@ addFurniture.label.initial_price=  Initial Price
 addFurniture.label.description= Description
 addFurniture.label.images= Images
 addFurniture.label.submit= Submit
+addElectricals.title= Add Electrical
+addElectricals.label= Add Electrical
 addElectricals.label.ad_title= Ad Title
 addElectricals.label.location= Location
 addElectricals.label.condition= Condition
 addElectricals.label.initial_price= Initial Price
+Electricals.label.last_price=  Last Price
+Electrical.label.country= Country
+Electrical.label.city= City
 addElectricals.label.description= Description
 addElectricals.label.images= Images
 addElectricals.label.submit= Submit
+addOtherThings.titel= Add Other Things
+addOtherThings.label= Add Other Things
 addOtherThings.label.ad_title= Ad Title
 addOtherThings.label.location= Location
 addOtherThings.label.condition= Condition
@@ -122,10 +157,37 @@ addOtherThings.label.initial_price= Initial Price
 addOtherThings.label.description= Description
 addOtherThings.label.images= Images
 addOtherThings.label.submit= Submit
+addRealEstates.title= Add Real Estate
+addRealEstates.label= Add Real Estate
 addRealEstates.label.ad_title= Ad Title
 addRealEstates.label.location= Location
-addRealEstates.label.RealEstateType=Real Estate Type
+addRealEstates.label.real_estate_type= Real Estate Type
 addRealEstates.label.initial_price= Initial Price
 addRealEstates.label.description= Description
 addRealEstates.label.images= Images
 addRealEstates.label.submit= Submit
+carspage.titel= Cars
+electricalspage.titel= Electricals
+furniturespage.titel= Furnitures
+real-estatespage.titel= Real Estates
+otherspage.titel= Others Things
+profilepage.titel= Profile
+loginpage.titel= Log In
+color.1=red
+color.2=black
+color.3=white
+color.4=blue
+color.5=yellow
+color.6=gray
+color.7=green
+color.8=pink
+color.9=brown
+color.10=orange
+carpage.titel=Car
+electricalpage.titel=Electrical
+electricals.label.last_price=  Last Price :
+electrical.label.country= Country :
+electrical.label.city= City : 
+electricals.label.description= Description :
+electricals.label.condition= Condition :
+
