--- a/src/main/resources/messages/messages_ar.properties
+++ b/src/main/resources/messages/messages_ar.properties
@@ -13,6 +13,60 @@ main.page.label.website.name=\u0627\u0644\u0645\u0632\u0627\u062F \u0627\u0644\u
 main.page.label.website.home=\u0627\u0644\u0635\u0641\u062D\u0629 \u0627\u0644\u0631\u0626\u064A\u0633\u064A\u0629
 main.page.label.website.Post=\u0623\u0636\u0641 \u0625\u0639\u0644\u0627\u0646\u0643
 main.page.label.website.login=\u062A\u0633\u062C\u064A\u0644 \u0627\u0644\u062F\u062E\u0648\u0644
+condition.new= \u062C\u062F\u064A\u062F
+condition.used= \u0645\u0633\u062A\u0639\u0645\u0644
+transmission_type.Manual= \u064A\u062F\u0648\u064A
+transmission_type.Auto= \u0623\u0648\u062A\u0648\u0645\u0627\u062A\u064A\u0643
+transmission_type.Other= \u063A\u064A\u0631 \u0630\u0644\u0643
+fuel_type.Gasolin= \u0628\u0646\u0632\u064A\u0646
+fuel_type.Diesel= \u062F\u064A\u0632\u0644
+fuel_type.Eliecteric= \u0643\u0647\u0631\u0628\u0627\u0626\u064A
+fuel_type.Hybrid= \u0647\u0627\u064A\u0628\u0631\u062F
+real_estate_type.Apartment= \u0634\u0642\u0629
+real_estate_type.Villa= \u0641\u064A\u0644\u0627
+real_estate_type.Land= \u0623\u0631\u0636 
+real_estate_type.Farm= \u0645\u0632\u0631\u0639\u0629
+real_estate_type.Commercial= \u0639\u0642\u0627\u0631 \u062A\u062C\u0627\u0631\u064A
+addCar.maker.1=\u0627\u0648\u0628\u0644
+addCar.maker.2=\u0623\u0648\u062F\u064A
+addCar.maker.3=\u0625\u0646\u0641\u064A\u0646\u064A\u062A\u064A
+addCar.maker.4=\u0623\u0645 \u062C\u064A
+addCar.maker.5=\u0627\u064A\u0633\u0648\u0632\u0648
+addCar.maker.6=\u0628\u0648\u0631\u0634
+addCar.maker.7=\u0647\u064A\u0648\u0646\u062F\u0627\u064A
+addCar.maker.8=\u0628\u064A \u0627\u0645 \u062F\u0628\u0644\u064A\u0648
+addCar.maker.9=\u0628\u064A\u062C\u0648  
+addCar.maker.10=\u062A\u0648\u064A\u0648\u062A\u0627
+addCar.maker.11=\u062A\u0633\u0644\u0627
+addCar.maker.12=\u062C\u0627\u0643\u0648\u0627\u0631
+addCar.maker.13=\u062C\u064A \u0627\u0645 \u0633\u064A
+addCar.maker.14=\u062C\u064A\u0628
+addCar.maker.15=\u062F\u0627\u064A\u0648
+addCar.maker.16=\u062F\u0648\u062F\u062C
+addCar.maker.17=\u0631\u0648\u0641\u0631
+addCar.maker.18=\u0631\u0648\u0644\u0632\u0631\u0648\u064A\u0633
+addCar.maker.19=\u0631\u064A\u0646\u0648
+addCar.maker.20=\u0633\u062A\u064A\u0631\u0648\u064A\u062F
+addCar.maker.21=\u0633\u0643\u0648\u062F\u0627
+addCar.maker.22=\u0633\u0648\u0632\u0648\u0643\u064A
+addCar.maker.23=\u0634\u064A\u0641\u0631\u0648\u0644\u064A\u0647
+addCar.maker.24=\u0641\u0648\u0631\u062F
+addCar.maker.25=\u0641\u0648\u0644\u0641\u0648
+addCar.maker.26=\u0641\u0648\u0644\u0643\u0633 \u0641\u0627\u062C\u0646
+addCar.maker.27=\u0641\u064A\u0631\u0627\u0631\u064A
+addCar.maker.28=\u0643\u0627\u062F\u064A\u0644\u0627\u0643
+addCar.maker.29=\u0643\u064A\u0627
+addCar.maker.30=\u0644\u0627\u062F\u0627
+addCar.maker.31=\u0644\u0627\u0646\u062F \u0631\u0648\u0641\u0631
+addCar.maker.32=\u0644\u0643\u0632\u0633
+addCar.maker.33=\u0645\u0627\u0632\u062F\u0627
+addCar.maker.34=\u0645\u0631\u0633\u064A\u062F\u0633 \u0628\u0646\u0632
+addCar.maker.35=\u0645\u064A\u062A\u0633\u0648\u0628\u064A\u0634\u064A
+addCar.maker.36=\u0646\u064A\u0633\u0627\u0646
+addCar.maker.37=\u0647\u0648\u0646\u062F\u0627
+addCar.maker.38=\u0622\u062E\u0631
+addCar.title=  \u0625\u0636\u0627\u0641\u0629 \u0633\u064A\u0627\u0631\u0629
+addCar.label= \u0625\u0636\u0627\u0641\u0629 \u0633\u064A\u0627\u0631\u0629
 addCar.label.ad_title= \u0639\u0646\u0648\u0627\u0646 \u0627\u0644\u0625\u0639\u0644\u0627\u0646
 addCar.label.location= \u0627\u0644\u0645\u0648\u0642\u0639
 addCar.label.car_maker= \u0627\u0644\u0646\u0648\u0639
@@ -24,6 +78,7 @@ addCar.label.kilometers= \u0627\u0644\u0643\u064A\u0644\u0648\u0645\u062A\u0631\
 addCar.label.initial_price= \u0627\u0644\u0633\u0639\u0631 \u0627\u0644\u0625\u0628\u062A\u062F\u0627\u0626\u064A
 addCar.label.year= \u0633\u0646\u0629 \u0627\u0644\u0635\u0646\u0639
 addCar.label.description= \u0627\u0644\u0648\u0635\u0641
+addCar.label.color= \u0627\u0644\u0644\u0648\u0646
 addCar.label.images= \u0627\u0644\u0635\u0648\u0631
 addCar.label.submit= \u0625\u0636\u0627\u0641\u0629
 main.page.dropdown.profile= \u0627\u0644\u0645\u0644\u0641 \u0627\u0644\u0634\u062E\u0635\u064A
@@ -51,6 +106,8 @@ profile.phone_number= \u0631\u0642\u0645 \u0627\u0644\u0647\u0627\u062A\u0641 :
 profile.country= \u0627\u0644\u062F\u0648\u0644\u0629 :
 profile.city=\u0627\u0644\u0645\u062D\u0627\u0641\u0638\u0629 :
 profile.credit_card_number=\u0631\u0642\u0645 \u0627\u0644\u0628\u0637\u0627\u0642\u0629 \u0627\u0644\u0628\u0646\u0643\u064A\u0629 :
+addFurniture.title= \u0625\u0636\u0627\u0641\u0629 \u0623\u062B\u0627\u062B
+addFurniture.label= \u0625\u0636\u0627\u0641\u0629 \u0623\u062B\u0627\u062B
 addFurniture.label.ad_title= \u0639\u0646\u0648\u0627\u0646 \u0627\u0644\u0625\u0639\u0644\u0627\u0646
 addFurniture.label.location= \u0627\u0644\u0645\u0648\u0642\u0639
 addFurniture.label.condition= \u0627\u0644\u062D\u0627\u0644\u0629
@@ -58,13 +115,18 @@ addFurniture.label.initial_price= \u0627\u0644\u0633\u0639\u0631 \u0627\u0644\u0
 addFurniture.label.description= \u0627\u0644\u0648\u0635\u0641
 addFurniture.label.images= \u0627\u0644\u0635\u0648\u0631
 addFurniture.label.submit= \u0625\u0636\u0627\u0641\u0629
+addElectricals.title= \u0625\u0636\u0627\u0641\u0629 \u0625\u0644\u0643\u062A\u0631\u0648\u0646\u064A\u0627\u062A
+addElectricals.label= \u0625\u0636\u0627\u0641\u0629 \u0625\u0644\u0643\u062A\u0631\u0648\u0646\u064A\u0627\u062A
 addElectricals.label.ad_title= \u0639\u0646\u0648\u0627\u0646 \u0627\u0644\u0625\u0639\u0644\u0627\u0646
 addElectricals.label.location= \u0627\u0644\u0645\u0648\u0642\u0639
 addElectricals.label.condition= \u0627\u0644\u062D\u0627\u0644\u0629
 addElectricals.label.initial_price= \u0627\u0644\u0633\u0639\u0631 \u0627\u0644\u0625\u0628\u062A\u062F\u0627\u0626\u064A
+addElectricals.label.last_price= \u0627\u0644\u0633\u0639\u0631 \u0627\u0644\u0646\u0647\u0627\u0626\u064A
 addElectricals.label.description= \u0627\u0644\u0648\u0635\u0641
 addElectricals.label.images= \u0627\u0644\u0635\u0648\u0631
 addElectricals.label.submit= \u0625\u0636\u0627\u0641\u0629
+addOtherThings.titel= \u0625\u0636\u0627\u0641\u0629 \u0623\u062E\u0631\u0649
+addOtherThings.label= \u0625\u0636\u0627\u0641\u0629 \u0623\u062E\u0631\u0649
 addOtherThings.label.ad_title= \u0639\u0646\u0648\u0627\u0646 \u0627\u0644\u0625\u0639\u0644\u0627\u0646
 addOtherThings.label.location= \u0627\u0644\u0645\u0648\u0642\u0639
 addOtherThings.label.condition= \u0627\u0644\u062D\u0627\u0644\u0629
@@ -72,8 +134,11 @@ addOtherThings.label.initial_price= \u0627\u0644\u0633\u0639\u0631 \u0627\u0644\
 addOtherThings.label.description= \u0627\u0644\u0648\u0635\u0641
 addOtherThings.label.images= \u0627\u0644\u0635\u0648\u0631
 addOtherThings.label.submit= \u0625\u0636\u0627\u0641\u0629
+addRealEstates.title= \u0625\u0636\u0627\u0641\u0629 \u0639\u0642\u0627\u0631
+addRealEstates.label= \u0625\u0636\u0627\u0641\u0629 \u0639\u0642\u0627\u0631
 addRealEstates.label.ad_title= \u0639\u0646\u0648\u0627\u0646 \u0627\u0644\u0625\u0639\u0644\u0627\u0646
 addRealEstates.label.location= \u0627\u0644\u0645\u0648\u0642\u0639
+addRealEstates.label.real_estate_type= \u0646\u0648\u0639 \u0627\u0644\u0639\u0642\u0627\u0631
 addRealEstates.label.condition= \u0627\u0644\u062D\u0627\u0644\u0629
 addRealEstates.label.initial_price= \u0627\u0644\u0633\u0639\u0631 \u0627\u0644\u0625\u0628\u062A\u062F\u0627\u0626\u064A
 addRealEstates.label.description= \u0627\u0644\u0648\u0635\u0641
@@ -91,3 +156,17 @@ location.city.8=\u0627\u0644\u0643\u0631\u0643
 location.city.9=\u0627\u0644\u0637\u0641\u064A\u0644\u0629
 location.city.10=\u0645\u0639\u0627\u0646
 location.city.11=\u0627\u0644\u0639\u0642\u0628\u0629
+carspage.titel= \u0627\u0644\u0633\u064A\u0627\u0631\u0627\u062A
+electricalspage.titel= \u0627\u0644\u0625\u0644\u0643\u062A\u0631\u0648\u0646\u064A\u0627\u062A
+furniturespage.titel= \u0627\u0644\u0623\u062B\u0627\u062B
+real-estatespage.titel= \u0627\u0644\u0639\u0642\u0627\u0631\u0627\u062A
+otherspage.titel= \u0623\u062E\u0631\u0649
+profilepage.titel= \u0627\u0644\u0645\u0644\u0641 \u0627\u0644\u0634\u062E\u0635\u064A
+loginpage.titel= \u062A\u0633\u062C\u064A\u0644 \u0627\u0644\u062F\u062E\u0648\u0644 
+carpage.titel=\u0633\u064A\u0627\u0631\u0629
+electricalpage.titel=\u0625\u0644\u0643\u062A\u0631\u0648\u0646\u064A
+electricals.label.last_price=  \u0627\u0644\u0633\u0639\u0631 \u0627\u0644\u0646\u0647\u0627\u0626\u064A :
+electrical.label.country= \u0627\u0644\u062F\u0648\u0644\u0629 :
+electrical.label.city= \u0627\u0644\u0645\u062F\u064A\u0646\u0629 :
+electricals.label.description= \u0627\u0644\u0648\u0635\u0641 :
+electricals.label.condition= \u0627\u0644\u062D\u0627\u0644\u0629 :
