--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -36,6 +36,8 @@ car_condition.1=new
 car_condition.2=used
 condition.new= New
 condition.used= Used
+condition.1= New
+condition.2= Used
 transmission_type.Manual= Manual
 transmission_type.Auto= Auto
 transmission_type.Other= Other
@@ -190,4 +192,4 @@ electrical.label.country= Country :
 electrical.label.city= City : 
 electricals.label.description= Description :
 electricals.label.condition= Condition :
-
+furniturepage.titel=Furniture
