--- a/src/main/resources/messages/messages_ar.properties
+++ b/src/main/resources/messages/messages_ar.properties
@@ -15,6 +15,8 @@ main.page.label.website.Post=\u0623\u0636\u0641 \u0625\u0639\u0644\u0627\u0646\u
 main.page.label.website.login=\u062A\u0633\u062C\u064A\u0644 \u0627\u0644\u062F\u062E\u0648\u0644
 condition.new= \u062C\u062F\u064A\u062F
 condition.used= \u0645\u0633\u062A\u0639\u0645\u0644
+condition.1= \u062C\u062F\u064A\u062F
+condition.2= \u0645\u0633\u062A\u0639\u0645\u0644
 transmission_type.Manual= \u064A\u062F\u0648\u064A
 transmission_type.Auto= \u0623\u0648\u062A\u0648\u0645\u0627\u062A\u064A\u0643
 transmission_type.Other= \u063A\u064A\u0631 \u0630\u0644\u0643
@@ -170,3 +172,4 @@ electrical.label.country= \u0627\u0644\u062F\u0648\u0644\u0629 :
 electrical.label.city= \u0627\u0644\u0645\u062F\u064A\u0646\u0629 :
 electricals.label.description= \u0627\u0644\u0648\u0635\u0641 :
 electricals.label.condition= \u0627\u0644\u062D\u0627\u0644\u0629 :
+furniturepage.titel=\u0623\u062B\u0627\u062B
