--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,6 +1,7 @@
 lang.eng=English
 lang.eng.label=Language
 lang.ar=\u0627\u0644\u0639\u0631\u0628\u064A\u0629
+html.dir=ltr
 home.title=Home
 main.page.title=Our Auctions
 main.page.label.cars=Cars
@@ -16,7 +17,7 @@ main.page.label.website.login=Log In
 location.city.0=Irbid
 location.city.1=Jerash
 location.city.2=Ajloun
-location.city.3=\u0650Al-Sult
+location.city.3=Al-Sult
 location.city.4=Madaba
 location.city.5=al-Mafraq
 location.city.6=Zarqa
