--- a/src/main/resources/messages/messages_ar.properties
+++ b/src/main/resources/messages/messages_ar.properties
@@ -1,6 +1,7 @@
 lang.eng=English
 lang.eng.label=\u0627\u0644\u0644\u063A\u0629
 lang.ar=\u0627\u0644\u0639\u0631\u0628\u064A\u0629
+html.dir=rtl
 home.title=\u0627\u0644\u0635\u0641\u062D\u0629 \u0627\u0644\u0631\u0626\u064A\u0633\u064A\u0629
 main.page.title=\u0645\u0632\u0627\u062F\u0627\u062A\u0646\u0627
 main.page.label.cars=\u0633\u064A\u0627\u0631\u0627\u062A
