--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -14,14 +14,14 @@ main.page.label.website.name=Jordanian Auction
 main.page.label.website.home=Home 
 main.page.label.website.Post=Post Your Ad
 main.page.label.website.login=Log In
-location.city.0=Irbid
+location.city.0=Amman
 location.city.1=Jerash
 location.city.2=Ajloun
 location.city.3=Al-Sult
 location.city.4=Madaba
 location.city.5=al-Mafraq
 location.city.6=Zarqa
-location.city.7=Amman
+location.city.7=Irbid
 location.city.8=al-Karak
 location.city.9=at-Tafila
 location.city.10=Ma'an
@@ -105,6 +105,7 @@ addCar.label.description= Description
 addCar.label.color= Color
 addCar.label.images= Images
 addCar.label.submit= Submit
+addCar.label.endsafetr=Ends After
 main.page.dropdown.profile= Profile
 main.page.dropdown.logout= logout
 login.page.sign_in= Sign In
