--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -195,3 +195,10 @@ electrical.label.city= City :
 electricals.label.description= Description :
 electricals.label.condition= Condition :
 furniturepage.titel=Furniture
+sharedInputFields.days= Days
+sharedInputFields.jod= JOD
+open.btn= Open 
+headr.admin_tools=Admin tools
+adminpage.titel= Admin tools
+admin.inactive= Inactive Ads  
+Delete.btn= Delete
