--- a/src/main/resources/messages/messages_ar.properties
+++ b/src/main/resources/messages/messages_ar.properties
@@ -84,6 +84,7 @@ addCar.label.description= \u0627\u0644\u0648\u0635\u0641
 addCar.label.color= \u0627\u0644\u0644\u0648\u0646
 addCar.label.images= \u0627\u0644\u0635\u0648\u0631
 addCar.label.submit= \u0625\u0636\u0627\u0641\u0629
+addCar.label.endsafetr= \u064A\u0646\u062A\u0647\u064A \u0628\u0639\u062F
 main.page.dropdown.profile= \u0627\u0644\u0645\u0644\u0641 \u0627\u0644\u0634\u062E\u0635\u064A
 main.page.dropdown.logout= \u062A\u0633\u062C\u064A\u0644 \u0627\u0644\u062E\u0631\u0648\u062C
 login.page.sign_in= \u062A\u0633\u062C\u064A\u0644 \u0627\u0644\u062F\u062E\u0648\u0644
@@ -174,3 +175,10 @@ electrical.label.city= \u0627\u0644\u0645\u062F\u064A\u0646\u0629 :
 electricals.label.description= \u0627\u0644\u0648\u0635\u0641 :
 electricals.label.condition= \u0627\u0644\u062D\u0627\u0644\u0629 :
 furniturepage.titel=\u0623\u062B\u0627\u062B
+sharedInputFields.days= \u0623\u064A\u0627\u0645
+sharedInputFields.jod= \u062F\u064A\u0646\u0627\u0631
+open.btn= \u0641\u062A\u062D
+headr.admin_tools=\u0623\u062F\u0648\u0627\u062A \u0627\u0644\u0645\u0634\u0631\u0641 
+adminpage.titel= \u0623\u062F\u0648\u0627\u062A \u0627\u0644\u0645\u0634\u0631\u0641
+admin.inactive= \u0625\u0639\u0644\u0627\u0646\u0627\u062A \u063A\u064A\u0631 \u0646\u0634\u0637\u0629   
+Delete.btn= \u062D\u0630\u0641
